# platanus

./: .cruft.json  AGENTS.md  DEVELOP.md  LICENSE  Makefile  README.md  mkdocs.yml  project-words.txt  project-words.txt.rej  pyproject.toml
.github/workflows/: ci.yml  cruft-update.yml
docs/: __init__.py  index.md
docs/api/: main.md
src/platanus/: __init__.py  file_layers.py  platanus.py
tests/: __init__.py  test_simple.py
